# lwcli

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  README_EN.md  build.sh  cppcheck.sh  generate_docs.sh  lwcli.c  lwcli_config.h  lwcli_port.c  lwcli_task.c
example/: main.c
example/FreeRTOS/: lwcli_task.c  lwcli_task.h  main.c
example/linux/: CMakeLists.txt  build_run.sh  main.c
inc/: lwcli.h  lwcli_config.h  lwcli_list.h
port/: lwcli_port.c
src/: lwcli.c  lwcli_list.c  lwcli_port.c  lwcli_task.c
